fixed style with openid login identifier being too long

--- a/themes/vibio/css/pages.css
+++ b/themes/vibio/css/pages.css
@@ -536,6 +536,10 @@ h5.menu_header {
 	width: 135px;
 }
 
+#user-login-form #edit-openid-identifier {
+	width: 115px;
+}
+
 #user-login-form div.form-item#edit-name-wrapper {
 	margin-top: 0;
 }
